test/fail/return-pattern-fail.grace
method name -> type { name } {}

name
